--- a/blocks/popup/_is-animated/popup_is-animated.css
+++ b/blocks/popup/_is-animated/popup_is-animated.css
@@ -6,3 +6,8 @@
     user-select: none;
     transition: visibility 0s 0.6s, opacity 0.6s;
 }
+
+.popup_is-animated:hover {
+    visibility: visible;
+    opacity: 1;
+}
