--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -7,6 +7,10 @@
 @import url('./__button/popup__button.css');
 @import url('./__caption/popup__caption.css');
 @import url('./__image/popup__image.css');
+@import url('./__input-error/popup__input-error.css');
+@import url('./__input/_err/popup__input_err.css');
+@import url('./__button/_inactive/popup__button_inactive.css');
+@import url('./__fieldset/popup__fieldset.css');
 
 .popup {
   font-family: 'Inter', Arial, sans-serif;
